--- a/style.css
+++ b/style.css
@@ -122,7 +122,14 @@ body {
 } 
 
 .port-card .image img { 
-	height: 150px; 
+	height: 250px; 
+	width: 100%; 
+	border-top-right-radius: 20px; 
+	border-top-left-radius: 20px; 
+} 
+
+.port-card .image1 img { 
+	height: 250px; 
 	width: 100%; 
 	border-top-right-radius: 20px; 
 	border-top-left-radius: 20px; 
@@ -133,7 +140,8 @@ body {
 	display: flex; 
 	align-items: center; 
 	justify-content: center; 
-	flex-direction: column; 
+	flex-direction: column;
+	background: linear-gradient(90deg in hsl shorter hue, blue, grey); 
 	margin: 4.8rem 0; 
 	padding: 0 5rem; 
 } 
@@ -200,6 +208,7 @@ body {
 	width: 80%; 
 	padding: 10px 0; 
 	margin: 1.67rem 0; 
+	
 } 
 
 .contact-form .form-btn { 
@@ -212,7 +221,8 @@ body {
 
 /* Footer Styles */
 .footer { 
-	background-color: #000; 
+	/* background-color: #000; */
+	background: linear-gradient(90deg in hsl shorter hue, black, blue); 
 	color: #fff; 
 	padding: 2rem; 
 } 
