--- a/style.css
+++ b/style.css
@@ -22,11 +22,12 @@ body {
 } 
 
 .logo { 
+
 	padding: 0 5rem; 
 } 
 
 .logo .logo-heading { 
-	/* color: #fff;  */
+	
 	color: white; 
 } 
 
@@ -45,15 +46,18 @@ body {
 } 
 
 .menu .menu-list { 
+
 	display: flex; 
 	list-style: none; 
 } 
 
 .menu-list .menu-list-items { 
+
 	padding: 0.5rem 1rem; 
 } 
 
 @media screen and (min-width: 856px) and (max-width: 1024px) { 
+
 	.menu-list .menu-list-items { 
 		padding: 0.5rem 0.3rem; 
 	} 
@@ -61,6 +65,7 @@ body {
 
 /* Main Hero Section Styles */
 .hero { 
+
 	background-image: url("img/bg1.jpg"); 
 	background-repeat: no-repeat; 
 	background-size: 100% 100%; 
@@ -70,74 +75,97 @@ body {
 	align-items: center; 
 	justify-content: start; 
 	margin: 4.8rem 0; 
+
 } 
 
 .hero .intro { 
+
 	text-align: center; 
 	margin: 0 5rem; 
+
 } 
 
 .hero .intro-buttons { 
+
 	margin: 2rem 0; 
 	display: flex; 
 	align-items: center; 
 	justify-content: space-evenly; 
+
 } 
 
 /* About section styles */
 .about { 
+
 	display: flex; 
 	align-items: center; 
 	background-image: linear-gradient(45deg, #363D73, #2794B3); 
 	justify-content: space-between; 
 	width: 100%; 
+
 } 
 
 .about .about-text { 
+
 	width: 450px; 
 	color: #fff; 
 	padding: 5rem 1rem 5rem 5rem; 
+
 } 
 
 .about .about-image img { 
+
 	height: 400px; 
 	width: 450px; 
-	padding: 5rem 5rem 5rem 1rem; 
+	padding: 5rem 5rem 5rem 1rem;
+
 } 
 
 /* Portfolio section styles */
 .portfolio { 
+
 	margin: 4.8rem 0; 
 	padding: 0 5rem; 
+
+
 } 
 
 .port-card { 
+
 	padding: 10 !important; 
 	background: none !important; 
     /* width: max-content; */
 	border: 2px solid #000; 
+
 } 
 
 .port-card .image { 
+
 	width: 100%; 
+
 } 
 
 .port-card .image img { 
+
 	height: 250px; 
 	width: 100%; 
 	border-top-right-radius: 20px; 
 	border-top-left-radius: 20px; 
+
 } 
 
 .port-card .image1 img { 
+
 	height: 250px; 
 	width: 100%; 
 	border-top-right-radius: 20px; 
 	border-top-left-radius: 20px; 
+
 } 
 
 /* Services section styles */
 .services { 
+
 	display: flex; 
 	align-items: center; 
 	justify-content: center; 
@@ -145,21 +173,27 @@ body {
 	background: linear-gradient(90deg in hsl shorter hue, blue, grey); 
 	margin: 4.8rem 0; 
 	padding: 0 5rem; 
+
 } 
 
 .my-row { 
+
 	display: flex; 
 	align-items: center; 
 	justify-content: space-between; 
 	margin: 2rem 0; 
+
 } 
 
 .my-row .my-col { 
+
 	text-align: center; 
 	width: 30%; 
+
 } 
 
 .my-card { 
+
 	text-align: center; 
 	display: flex; 
 	flex-direction: column; 
@@ -168,9 +202,11 @@ body {
 	border-radius: 20px; 
 	background-image: linear-gradient(#74D7BB, #53C8B6, #35A99C); 
 	padding: 1rem; 
+
 } 
 
 .icon { 
+
 	height: 100px; 
 	width: 100px; 
 	border-radius: 50%; 
@@ -181,13 +217,16 @@ body {
 } 
 
 .icon svg { 
+
 	font-size: 30px; 
 	color: #fff; 
 } 
 
 /* Contact section styles */
 .contact { 
-	padding: 0 5rem; 
+
+	padding: 0 5rem;
+	 
 } 
 
 .contact-content { 
@@ -212,7 +251,8 @@ body {
 	
 } 
 
-.contact-form .form-btn { 
+.contact-form .form-btn {
+
 	width: 83%; 
 } 
 
@@ -222,10 +262,12 @@ body {
 
 /* Footer Styles */
 .footer { 
+
 	/* background-color: #000; */
 	background: linear-gradient(90deg in hsl shorter hue, black, blue); 
 	color: #fff; 
 	padding: 2rem; 
+	
 } 
 
 .footer-list-items { 
@@ -357,4 +399,10 @@ body {
 	color: #363D73; 
 }
 
-
+.contact-text:hover { 
+	
+	
+    color: blue;
+	cursor: pointer;
+	border-bottom: 2px solid blue;
+} 
